# wagtail-nav-menus

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
sandbox/: settings.py  urls.py
sandbox/sandbox/: settings.py  urls.py
sandbox/sandbox/templates/wagtailcore/: page.html
sandbox/templates/wagtailcore/: page.html
src/wagtail_nav_menus/: __init__.py  apps.py  config.py  defaults.py  loading.py  models.py  serializers.py  tests.py  utils.py  viewsets.py  wagtail_hooks.py
src/wagtail_nav_menus/locale/es/LC_MESSAGES/: django.mo  django.po
src/wagtail_nav_menus/migrations/: 0001_initial.py  0002_auto_20190911_1745.py  0003_auto_20191111_1655.py  0004_alter_navmenu_menu.py
src/wagtail_nav_menus/templates/nav_menus/: get_url.html
src/wagtail_nav_menus/templatetags/: nav_menu_tags.py
wagtail_nav_menus/: defaults.py  loading.py  models.py  serializers.py  tests.py  utils.py  viewsets.py  wagtail_hooks.py
wagtail_nav_menus/locale/es/LC_MESSAGES/: django.po
wagtail_nav_menus/migrations/: 0001_initial.py  0002_auto_20190911_1745.py  0003_auto_20191111_1655.py  0004_alter_navmenu_menu.py
wagtail_nav_menus/templates/nav_menus/: menu_link.html  nav_category.html
wagtail_nav_menus/templates/nav_menus/tags/: menu.html
wagtail_nav_menus/templatetags/: nav_menu_tags.py
