[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wagtail-nav-menus"
version = "3.13.2"
description = "Wagtail Nav Menus is a app to provide highly customizable menus in wagtail by leveraging StreamFields."
readme = "README.rst"
dependencies = ["wagtail (>=7.0)", "wagtail-modeladmin (>=2.2.0,<3)"]
requires-python = ">=3.11"

[project.license]
text = "ISC"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/wagtail-nav-menus"
Repository = "https://gitlab.com/thelabnyc/wagtail-nav-menus"

[dependency-groups]
dev = [
    "ruff (>=0.14.10)",
    "tox==4.32.0",
    "ipdb (==0.13.13)",
    "mypy (==1.19.1)",
    "django-stubs (==5.2.8)",
    "djangorestframework-stubs (==3.16.6)",
    "tox-uv>=1.29.0",
    "coverage>=7.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["wagtail_nav_menus"]

[[tool.uv.index]]
name = "thelabnyc"
url = "https://gitlab.com/api/v4/groups/269576/-/packages/pypi/simple"
explicit = true

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = ["pyproject.toml:version"]
pre_bump_hooks = ["pre-commit run --all-files || true"]
post_bump_hooks = ["git push origin master $CZ_POST_CURRENT_TAG_VERSION"]

[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]

# Strict mode, see mypy --help
warn_unused_configs = true
# disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "wagtail.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wagtail_modeladmin.*"
follow_untyped_imports = true


[tool.django-stubs]
django_settings_module = "sandbox.sandbox.settings"

[tool.isort]
profile = "black"
from_first = true

[tool.ruff]
line-length = 160
extend-exclude = ["migrations"]

[tool.ruff.lint]

[tool.ruff.lint.isort]
from-first = true
